@@ -54,7 +54,8 @@
         'spec/stateSpec',
         'spec/pipeSpec',
         'spec/sessionSpec',
-        'spec/tutSpec'
+        'spec/tutSpec',
+        'spec/pageInfoSpec'
       ],
       function () {
         window.onload();
